--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
     "@swc/helpers": "~0.5.0",
+    "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rxjs": "~7.8.0",
@@ -64,6 +65,7 @@
     "babel-jest": "^29.4.1",
     "cypress": "^12.16.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.27.5",
