--- a/apps/ngapp/project.json
+++ b/apps/ngapp/project.json
@@ -90,6 +90,53 @@
       "options": {
         "buildTarget": "ngapp:build"
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/ngapp/.storybook",
+        "browserTarget": "ngapp:build",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/ngapp",
+        "configDir": "apps/ngapp/.storybook",
+        "browserTarget": "ngapp:build",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/ngapp/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "ngapp:build-storybook",
+        "staticFilePath": "dist/storybook/ngapp"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "ngapp:build-storybook:ci"
+        }
+      }
     }
   }
 }
