--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nx/next": "17.0.0-katerina.0",
     "@nx/react": "17.0.0-katerina.0",
     "@nx/rollup": "17.0.0-katerina.0",
+    "@nx/storybook": "17.0.0-katerina.0",
     "@nx/vite": "17.0.0-katerina.0",
     "@nx/web": "17.0.0-katerina.0",
     "@nx/webpack": "17.0.0-katerina.0",
@@ -48,6 +49,13 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^7.0.0",
     "@schematics/angular": "~16.1.0",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/angular": "^7.1.0",
+    "@storybook/core-server": "^7.1.0",
+    "@storybook/jest": "~0.1.0",
+    "@storybook/test-runner": "^0.11.0",
+    "@storybook/testing-library": "~0.2.0",
     "@svgr/rollup": "^8.0.1",
     "@svgr/webpack": "^8.0.1",
     "@swc/cli": "~0.1.62",
