--- a/libs/nglib/project.json
+++ b/libs/nglib/project.json
@@ -26,6 +26,53 @@
       "options": {
         "lintFilePatterns": ["libs/nglib/**/*.ts", "libs/nglib/**/*.html"]
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/nglib/.storybook",
+        "browserTarget": "nglib:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/nglib",
+        "configDir": "libs/nglib/.storybook",
+        "browserTarget": "nglib:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c libs/nglib/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "nglib:build-storybook",
+        "staticFilePath": "dist/storybook/nglib"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "nglib:build-storybook:ci"
+        }
+      }
     }
   }
 }
