added storybook to all react

--- a/apps/reapp/project.json
+++ b/apps/reapp/project.json
@@ -72,6 +72,49 @@
       "options": {
         "buildTarget": "reapp:build"
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/reapp/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/reapp",
+        "configDir": "apps/reapp/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/reapp/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "reapp:build-storybook",
+        "staticFilePath": "dist/storybook/reapp"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "reapp:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": []
