--- a/apps/reappw/project.json
+++ b/apps/reappw/project.json
@@ -87,6 +87,49 @@
           "codeCoverage": true
         }
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/reappw/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/reappw",
+        "configDir": "apps/reappw/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/reappw/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "reappw:build-storybook",
+        "staticFilePath": "dist/storybook/reappw"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "reappw:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": []
