--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "@storybook/angular": "^7.1.0",
     "@storybook/core-server": "^7.1.0",
     "@storybook/jest": "~0.1.0",
+    "@storybook/react": "7.1.0",
+    "@storybook/react-vite": "7.1.0",
+    "@storybook/react-webpack5": "7.1.0",
     "@storybook/test-runner": "^0.11.0",
     "@storybook/testing-library": "~0.2.0",
     "@svgr/rollup": "^8.0.1",
@@ -71,6 +74,7 @@
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
     "babel-jest": "^29.4.1",
+    "core-js": "^3.6.5",
     "cypress": "^12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.4.1",
