added next storybook

--- a/apps/nextapp/project.json
+++ b/apps/nextapp/project.json
@@ -62,6 +62,49 @@
       "options": {
         "lintFilePatterns": ["apps/nextapp/**/*.{ts,tsx,js,jsx}"]
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/nextapp/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/nextapp",
+        "configDir": "apps/nextapp/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/nextapp/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "nextapp:build-storybook",
+        "staticFilePath": "dist/storybook/nextapp"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "nextapp:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": []
