--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/angular": "^7.1.0",
     "@storybook/core-server": "^7.1.0",
     "@storybook/jest": "~0.1.0",
+    "@storybook/nextjs": "7.1.0",
     "@storybook/react": "7.1.0",
     "@storybook/react-vite": "7.1.0",
     "@storybook/react-webpack5": "7.1.0",
